--- a/app/views/release_types/edit.html.erb
+++ b/app/views/release_types/edit.html.erb
@@ -1,3 +1,3 @@
-<%= render 'shared/page_title', title: "Edit venue: " + display_venue(@venue) %>
+<%= render 'shared/page_title', title: "Edit Release Type: " + @release_type.name %>
 
 <%= render 'form' %>
