--- a/app/views/release_types/new.html.erb
+++ b/app/views/release_types/new.html.erb
@@ -1,3 +1,3 @@
-<%= render 'shared/page_title', title: "Add new venue to database" %>
+<%= render 'shared/page_title', title: "Add new release type to database" %>
 
 <%= render 'form' %>
