--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -8,3 +8,11 @@
       <% end %>
     </div>
   </div>
+  
+<script type="text/javascript">
+$(document).on('turbolinks:load', function(){
+    $(".alert").delay(2500).slideUp(500, function(){
+          $(".alert").alert('close');
+      });
+    });
+</script>
