--- a/app/views/logins/new.html.erb
+++ b/app/views/logins/new.html.erb
@@ -10,19 +10,19 @@
 <%= form_tag '/login' do %>
   <div class="row main-text">
 
-    <div class="col-sm-5">
-      <%= label_tag :email %>
+    <div class="col-sm-5 form-group">
+      <%= label_tag :email, "Email"  %>
     </div>
-    <div class="col-sm-7">
-      <%= text_field_tag :email %>
+    <div class="col-sm-7 form-group">
+      <%= text_field_tag :email, nil, class: "form-control" %>
     </div>
-    <div class="col-sm-5">
+    <div class="col-sm-5 form-group">
       <%= label_tag :password %>
     </div>
-    <div class="col-sm-7">
-      <%= password_field_tag :password %>
+    <div class="col-sm-7 form-group">
+      <%= password_field_tag :password, nil, class: "form-control" %>
     </div>      
-    <div class="col-12 text-center mt-4">
+    <div class="col-12 text-center mt-4 form-group">
       <%= submit_tag 'Log in', class: "btn btn-default" %>
     </div>
 
