--- a/app/views/releases/edit.html.erb
+++ b/app/views/releases/edit.html.erb
@@ -1,3 +1,3 @@
-<%= render 'shared/page_title', title: "Edit venue: " + display_venue(@venue) %>
+<%= render 'shared/page_title', title: "Edit release: " + @release.title %>
 
 <%= render 'form' %>
