--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/page_title', title: "Show: " + display_venue(@show.venue) + " on " + format_date(@show.date), link: edit_show_path(@show) %>
+<%= render 'shared/page_title', title: "Show: " + display_venue(@show.venue) + " on " + format_date(@show.date) %>
 <div class="row mb-3">
   <div class="col-11 offset-1">
     <section class="main-text">
@@ -18,11 +18,17 @@
 </div>
 
 <div class="row">
-  <div class="col-6 text-center my-3">
-    <%= link_to "Back to shows", shows_path, class: "main-text main-text-link" %>
-  </div>
-  <div class="col-6 text-center my-3">
-    <%= link_to "DELETE THIS SHOW", @show, method: :delete, class: "main-text main-text-link", data: { confirm: "Are you sure you want to delete the show on: " +  @show.date.to_s + "?" } %>
-  </div>
+  <% if logged_in? and current_user.admin? %>
+    <div class="col-6 text-center my-3">
+      <%= link_to "Back to shows", shows_path, class: "main-text main-text-link" %>
+    </div>
+    <div class="col-6 text-center my-3">
+      <%= link_to "DELETE THIS SHOW", @show, method: :delete, class: "main-text main-text-link", data: { confirm: "Are you sure you want to delete the show on: " +  format_date(@show.date) + "?" } %>
+    </div>
+  <% else %>
+    <div class="col-12 text-center my-3">
+      <%= link_to "Back to Shows", shows_path, class: "main-text main-text-link" %>
+    </div>
+  <% end %>
 </div>
 <hr/>
