--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,34 +3,34 @@
 
 <%= form_for @user do |f| %>
   <div class="row main-text">
-    <div class="col-sm-5">
+    <div class="col-sm-5 form-group">
       <%= f.label :username %>
     </div>
-    <div class="col-sm-7">
-      <%= f.text_field :username %>
+    <div class="col-sm-7 form-group">
+      <%= f.text_field :username, class: "form-control" %>
     </div>
-    <div class="col-sm-5">
+    <div class="col-sm-5 form-group">
       <%= f.label :email %>
     </div>
-    <div class="col-sm-7">
-      <%= f.email_field :email %>
+    <div class="col-sm-7 form-group">
+      <%= f.email_field :email, class: "form-control" %>
     </div>
-    <div class="col-sm-5">
+    <div class="col-sm-5 form-group">
       <%= f.label :password %>
     </div>
-    <div class="col-sm-7">
-      <%= f.password_field :password %>
+    <div class="col-sm-7 form-group">
+      <%= f.password_field :password, class: "form-control" %>
     </div>      
-    <div class="col-sm-5">
+    <div class="col-sm-5 form-group">
       <%= f.label :password_confirmation %>
     </div>
-    <div class="col-sm-7">
-      <%= f.password_field :password_confirmation %>
+    <div class="col-sm-7 form-group">
+      <%= f.password_field :password_confirmation, class: "form-control" %>
     </div>
-    <div class="col-6 text-center mt-4">
+    <div class="col-6 text-center mt-4 form-group">
       <%= f.submit(@user.new_record? ? 'Subscribe to mailing list' : 'Edit Profile', class: "btn btn-default") %>
     </div>
-    <div class="col-6 text-center mt-4">
+    <div class="col-6 text-center mt-4 form-group">
       <button class="btn btn-default"><%= link_to "Cancel", :back, class: "form-button" %></button>
     </div>
   </div>
