--- a/app/views/pages/music.html.erb
+++ b/app/views/pages/music.html.erb
@@ -1,37 +1,14 @@
-				<div class="text-center">
-					<div class="highlight-background music-container">
-						<div class="d-lg-flex flex-row">
-							<h4 class="main-text-header"><a class="main-text main-text-link" href="https://order227.bandcamp.com/track/case-for-concern">CASE FOR CONCERN &#40;single&#41; - 13 October 2017</a></h4>
-						</div>
-						<div class="d-lg-flex flex-row">
-							<iframe style="border: 0; width: 600px; height: 120px;"  src="https://bandcamp.com/EmbeddedPlayer/track=2984037726/size=large/bgcol=333333/linkcol=ffffff/artwork=small/transparent=true/" seamless><a href="https://order227.bandcamp.com/track/case-for-concern">Case For Concern by Order#227</a></iframe>
-						</div>
-					</div>
-					<div class="highlight-background music-container">
-						<div class="d-lg-flex flex-row">
-							<h4 class="main-text-header"><a class="main-text main-text-link" href="https://order227.bandcamp.com/track/i-dont-think-so">I DON&#39;T THINK SO &#40;single&#41; - 19 September 2017</a></h4>
-						</div>
-						<div class="d-lg-flex flex-row">
-							<iframe style="border: 0; width: 600px; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=3511334691/size=large/bgcol=333333/linkcol=ffffff/artwork=small/transparent=true/" seamless><a href="https://order227.bandcamp.com/track/i-dont-think-so">I Don&#39;t Think So by Order#227</a></iframe>
-						</div>
-					</div>
-					<div class="highlight-background music-container">
-						<div class="d-lg-flex flex-row">
-							<h4 class="main-text-header"><a class="main-text main-text-link" href="https://order227.bandcamp.com/album/behind-closed-doors">BEHIND CLOSED DOORS &#40;EP&#41; - 2 May 2017</a></h4>
-						</div>
-						<div class="d-lg-flex flex-row">
-							<iframe style="border: 0; width: 600px; height: 241px;" src="https://bandcamp.com/EmbeddedPlayer/album=2530965565/size=large/bgcol=333333/linkcol=ffffff/artwork=small/transparent=true/" seamless><a href="http://order227.bandcamp.com/album/behind-closed-doors">Behind Closed Doors by Order#227</a></iframe>
-						</div>
-					</div>
-					<div class="highlight-background music-container">
-						<div class="d-lg-flex flex-row">
-							<h4 class="main-text-header"><a class="main-text main-text-link" href="https://order227.bandcamp.com/album/theres-no-rules">THERE&#39;S NO RULES &#40;EP&#41; - 29 January 2017</a></h4>
-						</div>
-						<div class="d-lg-flex flex-row">
-							<iframe style="border: 0; width: 600px; height: 241px;" src="https://bandcamp.com/EmbeddedPlayer/album=3923005494/size=large/bgcol=333333/linkcol=ffffff/artwork=small/transparent=true/" seamless><a href="https://order227.bandcamp.com/album/theres-no-rules">There&#39;s No Rules by Order#227</a></iframe>
-						</div>
-					</div>
-					<div class="highlight-background music-container">
-						<h4 class="main-text-header"><a class="main-text main-text-link" href="http://www.rivetgunrecords.co.uk/order227/order227_wires.htm">WIRES TO MY HEAD &#40;EP&#41; - March 2016</a></h4>
-					</div>
-				</div>
+<div class="text-center">
+  <% @releases.each do |release| %>
+		<div class="highlight-background music-container">
+			<div class="d-lg-flex flex-row main-text">
+				<%= link_to release_title_and_type(release) + " - " + release.release_date.to_formatted_s(:rfc822), release.url, class: "main-text-link" %>
+			</div>
+			<% if release.url[0, 29] == "https://order227.bandcamp.com" %>
+  			<div class="d-lg-flex flex-row">
+  			  <%= bandcamp_link(release) %>
+  			</div>
+			<% end %>
+		</div>
+  <% end %>
+</div>
