--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -1,17 +1,4 @@
-<% if logged_in? and current_user.admin? %>
-<div class="row mb-3">
-  <div class="col text-center">
-    <%= link_to "ADD NEW POST", new_post_path, class: "main-text main-text-header main-text-link" %>
-  </div>
-</div>
-<% end %>
-
-<%= render 'shared/page_title', title: "Not One Step Back" %>
-
-<%= will_paginate %>
-<% if @posts.total_pages > 1 %>
-  <hr/>
-<% end %>
+<%= render 'shared/page_title', title: "Order#227 - Not One Step Back" %>
 
 <% @posts.each do |o| %>
   
@@ -48,22 +35,11 @@
       </section>
     </div>
 
-    
-    <% if logged_in? and current_user.admin? %>
-      <div class="col-6 text-center align-self-center">
-        <%= link_to "EDIT", edit_post_path(o), class: "main-text main-text-header main-text-link" %>
-      </div>
-      <div class="col-6 text-center align-self-center">
-        <%= link_to "DELETE", o, method: :delete, class: "main-text main-text-header main-text-link", data: { confirm: "Are you sure you want to delete this post?" } %>
-      </div>
-    <% end %>
   </div>
   <% if o != @posts.last %>
     <hr/>
   <% end %>
 
 <% end %>
-
-<%= will_paginate %>
 
 <hr/>
