--- a/app/views/releases/_form.html.erb
+++ b/app/views/releases/_form.html.erb
@@ -15,6 +15,12 @@
       <%= f.url_field :url, class: "form-control" %>
     </div>
     <div class="col-sm-5 form-group">
+      <%= f.label :release_embed_url, "Bandcamp EmbeddedPlayer Link" %>
+    </div>
+    <div class="col-sm-7 form-group">
+      <%= f.url_field :release_embed_url, class: "form-control" %>
+    </div>
+    <div class="col-sm-5 form-group">
       <%= f.label :release_date %>
     </div>
     <div class="col-sm-7 form-group">
