--- a/app/views/pages/gallery.html.erb
+++ b/app/views/pages/gallery.html.erb
@@ -1,43 +1,25 @@
-					<div id="frontPageCarousel" class="carousel slide m-2" data-ride="carousel">
-						<ol class="carousel-indicators">
-							<li data-target="#frontPageCarousel" data-slide-to="0" class="active"></li>
-							<li data-target="#frontPageCarousel" data-slide-to="1"></li>
-							<li data-target="#frontPageCarousel" data-slide-to="2"></li>
-							<li data-target="#frontPageCarousel" data-slide-to="3"></li>
-							<li data-target="#frontPageCarousel" data-slide-to="4"></li>
-							<li data-target="#frontPageCarousel" data-slide-to="5"></li>
-							<li data-target="#frontPageCarousel" data-slide-to="6"></li>
-						</ol>
-						<div class="carousel-inner">
-							<div class="carousel-item active">
-								<%= image_tag("15241840_1194167467318774_2378143932062040868_n.jpg", {class: "d-block w-100", alt: "Order#227 O2 Oxford Nov '16"}) %>
-							</div>
-							<div class="carousel-item">
-								<img class="d-block w-100" src="images/cfc_front.jpg" alt="Case For Concern">
-							</div>
-							<div class="carousel-item">
-								<img class="d-block w-100" src="images/norules_quote.jpg" alt="There's No Rules">
-							</div>
-							<div class="carousel-item">
-								<img class="d-block w-100" src="images/behind_quote.png" alt="Behind Closed Doors">
-							</div>
-							<div class="carousel-item">
-								<img class="d-block w-100" src="images/flyers/20180216_flyer.jpg">
-							</div>
-							<div class="carousel-item">
-								<img class="d-block w-100" src="images/flyers/20180210_flyer.jpg">
-							</div>
-							<div class="carousel-item">
-								<img class="d-block w-100" src="images/flyers/20180126_flyer.jpg">
-							</div>
-							
-						</div>
-						<a class="carousel-control-prev" href="#frontPageCarousel" role="button" data-slide="prev">
-							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-							<span class="sr-only">Previous</span>
-						</a>
-						<a class="carousel-control-next" href="#frontPageCarousel" role="button" data-slide="next">
-							<span class="carousel-control-next-icon" aria-hidden="true"></span>
-							<span class="sr-only">Next</span>
-						</a>
-					</div>
+<div class="container-fluid">
+
+  <% will_paginate @pictures %>
+    <% if @pictures.total_pages > 1 %>
+      <hr/>
+    <% end %>
+    <div class="row">
+      <% @pictures.each do |picture| %>
+        <div class="col-4 col-md-3 col-lg-2">
+          <%= link_to image_tag(picture.picture.middle.url, {class: "img-fluid img-thumbnail"}), "#", :data => { "data-toggle" => "modal", "data-target" => ".myModal"  } %>
+        </div>
+      <% end %>
+    </div>
+    
+  
+  <% will_paginate @pictures %>
+</div>
+
+<div class="modal fade myModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      ...
+    </div>
+  </div>
+</div>
