--- a/app/views/releases/_form.html.erb
+++ b/app/views/releases/_form.html.erb
@@ -36,7 +36,7 @@
       <%= f.label :release_type_id, "Release Type" %>
     </div>
     <div class="col-sm-7 form-group">
-      <%= f.select :release_type_id, options_for_select(ReleaseType.all.order(:name).map{ |s| [s.name, s.id]}), {include_blank: "Select Release Type"}, {class: "form-control"} %>
+      <%= f.select :release_type_id, options_for_select(ReleaseType.all.order(:name).map{ |s| [s.name, s.id]}, @release.release_type_id), {include_blank: "Select Release Type"}, {class: "form-control"} %>
     </div>    
     <div class="col-6 text-center mt-4 form-group">
       <%= f.submit(@release.new_record? ? 'Create new Release' : 'Edit Release', class: "btn btn-default") %>
