sidebar shows and ordering and scopes in models

--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -71,6 +71,15 @@ hr {
 	background-color: #1A1A1A;
 }
 
+.left-bar {
+  color: #FFFFFF;
+  font-weight: bold;
+}
+
+.left-bar:hover{
+  color: #FFFFFF;
+
+}
 
 .main-text {
 	color: #777777;
