--- a/app/views/layouts/_leftbar.html.erb
+++ b/app/views/layouts/_leftbar.html.erb
@@ -1,9 +1,38 @@
-<div class="col-lg-2 order-lg-1 col-10 offset-1 offset-lg-0 order-3 text-center mt-3">
+<div class="col-lg-2 order-lg-1 col-10 offset-1 offset-lg-0 order-3 mt-3">
 
-    <p><a class="main-text main-text-link" href="http://www.songkick.com/artists/9002289" target="_blank">ORDER#227 SHOWS</a></p>
-    
-    <a href="http://www.songkick.com/artists/9002289" class="songkick-widget main-text main-text-link" data-theme="dark" data-other-artists="on" data-detect-style="true" data-font-color="#ffffff" data-background-color="transparent">LIVE DATES</a>
-    
-    <script src="//widget.songkick.com/widget.js"></script>
+<div class="main-text col-12 text-center">
+  <%= link_to "Upcoming Shows", shows_path, class: "main-text main-text-link" %>
+</div>
+<hr/>
+<% if @nextfiveshows.count < 1 %>
+  <div class="col-12 text-center">
+    <%= link_to "Contact us to hear Order#227 near you!", contact_path, {class: "main-text main-text-link"} %>
+  </div>
+<% end %>
+<% @nextfiveshows.each do |show| %>
+  <div class="row">
+    <div class="col-12">
+      <section class="mt-1 footer-text">
+        <p><%= link_to format_date(show.date), show_path(show), class: "left-bar" %></p>
+        <p><%= link_to display_venue(show.venue), show_path(show), class: "left-bar" %></p>
+      </section>
+  </div>
+    <div class="col-12">
+      <section class="footer-text">
+        <strong>Bands: </strong>
+          <% show.bands.each do |band| %>
+              <%= band.name %>
+            <% if band != show.bands.last %> / <% end %>
+          <% end %>
+        
+      </section>
+    </div>
+   </div>
+  <% if show != @nextfiveshows.last %>
+    <hr/>
+  <% end %>
+<% end %>
+
+<hr/>
 
 </div>
